<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtCountryCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/country_code"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="@dimen/txtSizeNumberPad"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtxPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@android:color/transparent"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="@string/hint_phone"
            android:inputType="number|phone"
            android:maxLength="10"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="@dimen/txtSizeNumberPad"
            android:textStyle="bold" />

    </LinearLayout>

    <include
        android:id="@+id/pad"
        layout="@layout/pad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />

    <ImageView
        android:id="@+id/imgSend"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="end"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:contentDescription="@string/img_description"
        android:padding="12dp"
        android:src="@drawable/ic_send_black_36dp" />

</LinearLayout>